finished document updation for latest changes
chaging style

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -607,6 +607,22 @@
 								<td></td>
 								<td></td>
 							</tr>
+							<tr class="alt">
+								<td><a href="#accountingrules">Accounting Rules</a></td>
+								<td>accountingrules</td>
+								<td><a href="#accountingrules_create">Create a Accounting Rule</a></td>
+								<td><a href="#accountingrules_list">List Accounting Rules</a></td>
+								<td></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td></td>
+								<td>accountingrules/{accountingruleId}</td>
+								<td></td>
+								<td><a href="#accountingrules_retrieve">Retrieve a Accounting Rule</a></td>
+								<td><a href="#accountingrules_update">Update a Accounting Rule</a></td>
+								<td><a href="#accountingrules_delete">Delete a Accounting Rule</a></td>
+							</tr>
 						</table>
 					</div>
 				</div>
@@ -750,22 +766,6 @@
 								<td><a href="#charges_retrieve">Retrieve a Charge</a></td>
 								<td><a href="#charges_update">Update a Charge</a></td>
 								<td><a href="#charges_delete">Delete a Charge</a></td>
-							</tr>
-							<tr>
-								<td><a href="#accountingrules">Accounting Rules</a></td>
-								<td>accountingrules</td>
-								<td><a href="#accountingrules_create">Create a Accounting Rule</a></td>
-								<td><a href="#accountingrules_list">List Accounting Rules</a></td>
-								<td></td>
-								<td></td>
-							</tr>
-							<tr class="alt">
-								<td></td>
-								<td>accountingrules/{accountingrulesId}</td>
-								<td></td>
-								<td><a href="#accountingrules_retrieve">Retrieve a Accounting Rule</a></td>
-								<td><a href="#accountingrules_update">Update a Accounting Rule</a></td>
-								<td><a href="#accountingrules_delete">Delete a Accounting Rule</a></td>
 							</tr>
 						</table>
 					</div>
@@ -14666,7 +14666,23 @@ GET https://DomainName/api/v1/search?query=000000111
 					<td></td>
 					<td></td>
 				</tr>
-                <tr>
+				<tr>
+					<td><a href="#accountingrules">Accounting Rules</a></td>
+					<td>accountingrules</td>
+					<td><a href="#accountingrules_create">Create a Accounting Rule</a></td>
+					<td><a href="#accountingrules_list">List Accounting Rules</a></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>accountingrules/{accountingrulesId}</td>
+					<td></td>
+					<td><a href="#accountingrules_retrieve">Retrieve a Accounting Rule</a></td>
+					<td><a href="#accountingrules_update">Update a Accounting Rule</a></td>
+					<td><a href="#accountingrules_delete">Delete a Accounting Rule</a></td>
+				</tr>
+                <tr class="alt">
                     <td><a href="#reports">Report</a></td>
                     <td>reports</td>
                     <td><a href="#reports_create">Create a Report</a></td>
@@ -15039,23 +15055,7 @@ GET https://DomainName/api/v1/search?query=000000111
                     <td></td>
                     <td></td>
                     <td></td>
-                </tr>
-                <tr class="alt">
-					<td><a href="#accountingrules">Accounting Rules</a></td>
-					<td>accountingrules</td>
-					<td><a href="#accountingrules_create">Create a Accounting Rule</a></td>
-					<td><a href="#accountingrules_list">List Accounting Rules</a></td>
-					<td></td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>accountingrules/{accountingrulesId}</td>
-					<td></td>
-					<td><a href="#accountingrules_retrieve">Retrieve a Accounting Rule</a></td>
-					<td><a href="#accountingrules_update">Update a Accounting Rule</a></td>
-					<td><a href="#accountingrules_delete">Delete a Accounting Rule</a></td>
-				</tr>				
+                </tr>				
 			</table>
 		</div>
 
